--- a/angularproject1/angular.json
+++ b/angularproject1/angular.json
@@ -101,7 +101,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
