--- a/angularproject1/.hintrc
+++ b/angularproject1/.hintrc
@@ -8,6 +8,14 @@
       {
         "label": "off"
       }
-    ]
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ],
+    "no-inline-styles": "off",
+    "typescript-config/consistent-casing": "off"
   }
 }
